--- a/src/Agent/App.config
+++ b/src/Agent/App.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <appSettings>
+      <add key="RabbitmqUrl" value="rabbitmq://localhost"/>
+    </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
     </startup>
@@ -44,9 +47,4 @@
             </bindingExtensions>
         </extensions>
     </system.serviceModel>
-    <appSettings>
-        <!-- Service Bus specific app setings for messaging connections -->
-        <add key="Microsoft.ServiceBus.ConnectionString"
-            value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=[your secret]"/>
-    </appSettings>
 </configuration>
