--- a/src/Engine/App.config
+++ b/src/Engine/App.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
-    </startup>
+  <appSettings>
+    <add key="RabbitmqUrl" value="rabbitmq://localhost"/>
+  </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
+  </startup>
     <system.serviceModel>
         <extensions>
             <!-- In this extension section we are introducing all known service bus extensions. User can remove the ones they don't need. -->
@@ -44,9 +47,4 @@
             </bindingExtensions>
         </extensions>
     </system.serviceModel>
-    <appSettings>
-        <!-- Service Bus specific app setings for messaging connections -->
-        <add key="Microsoft.ServiceBus.ConnectionString"
-            value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=[your secret]"/>
-    </appSettings>
 </configuration>
