--- a/src/Agent/App.config
+++ b/src/Agent/App.config
@@ -2,6 +2,8 @@
 <configuration>
     <appSettings>
       <add key="RabbitmqUrl" value="rabbitmq://localhost"/>
+      <add key="Username" value=""/>
+      <add key="Password" value=""/>
     </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
