Implemented MongoContextStore; made some refactoring

--- a/src/Agent/App.config
+++ b/src/Agent/App.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <appSettings>
-      <add key="RabbitmqUrl" value="rabbitmq://localhost"/>
-      <add key="Username" value=""/>
-      <add key="Password" value=""/>
+      <add key="RabbitmqUrl" value="rabbitmq://192.168.1.200"/>
+      <add key="Username" value="test"/>
+      <add key="Password" value="test"/>
     </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
