--- a/src/Engine/App.config
+++ b/src/Engine/App.config
@@ -1,9 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="RabbitmqUrl" value="rabbitmq://localhost"/>
-    <add key="Username" value=""/>
-    <add key="Password" value=""/>
+    <!--Possible values: Memory, MongoDb-->
+    <add key="ContextStore" value="MongoDb"/>
+    
+    <add key="RabbitMqUrl" value="rabbitmq://192.168.1.200"/>
+    <add key="RabbitMqUsername" value="test"/>
+    <add key="RabbitMqPassword" value="test"/>
+  
+    <add key="MongoDbUrl" value="mongodb://192.168.1.200"/>
+    <add key="MongoDbDatabase" value="benchmark"/>
+    <add key="MongoDbContextCollection" value="contexts"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
