--- a/src/Engine/Engine.csproj
+++ b/src/Engine/Engine.csproj
@@ -57,6 +57,18 @@
       <HintPath>..\packages\Microsoft.WindowsAzure.ConfigurationManager.3.2.1\lib\net40\Microsoft.WindowsAzure.Configuration.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="MongoDB.Bson, Version=2.2.3.3, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MongoDB.Bson.2.2.3\lib\net45\MongoDB.Bson.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MongoDB.Driver, Version=2.2.3.3, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MongoDB.Driver.2.2.3\lib\net45\MongoDB.Driver.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MongoDB.Driver.Core, Version=2.2.3.3, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MongoDB.Driver.Core.2.2.3\lib\net45\MongoDB.Driver.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="NewId, Version=2.1.3.0, Culture=neutral, PublicKeyToken=b8e0e9f2f1e657fa, processorArchitecture=MSIL">
       <HintPath>..\packages\NewId.2.1.3\lib\net45\NewId.dll</HintPath>
       <Private>True</Private>
@@ -88,8 +100,11 @@
   <ItemGroup>
     <Compile Include="Analytics.cs" />
     <Compile Include="Contexts\Context.cs" />
-    <Compile Include="Contexts\ContextStore.cs" />
+    <Compile Include="Contexts\ContextRunner.cs" />
+    <Compile Include="Contexts\MemoryContextStore.cs" />
     <Compile Include="Consumers\RuleExecutedConsumer.cs" />
+    <Compile Include="Contexts\IContextStore.cs" />
+    <Compile Include="Contexts\MongoContextStore.cs" />
     <Compile Include="Metrics\MetricsStore.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
