--- a/src/Engine/packages.config
+++ b/src/Engine/packages.config
@@ -5,6 +5,9 @@
   <package id="MassTransit.NLog" version="3.2.4" targetFramework="net452" />
   <package id="MassTransit.RabbitMQ" version="3.2.4" targetFramework="net452" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.1" targetFramework="net452" />
+  <package id="MongoDB.Bson" version="2.2.3" targetFramework="net452" />
+  <package id="MongoDB.Driver" version="2.2.3" targetFramework="net452" />
+  <package id="MongoDB.Driver.Core" version="2.2.3" targetFramework="net452" />
   <package id="NewId" version="2.1.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="NLog" version="4.2.3" targetFramework="net452" />
