Implemented operations with RabbitMQ and MongoDB as async

--- a/src/Engine/App.config
+++ b/src/Engine/App.config
@@ -8,7 +8,7 @@
     <add key="RabbitMqUsername" value="test"/>
     <add key="RabbitMqPassword" value="test"/>
   
-    <add key="MongoDbUrl" value="mongodb://192.168.1.200"/>
+    <add key="MongoDbHost" value="192.168.1.200"/>
     <add key="MongoDbDatabase" value="benchmark"/>
     <add key="MongoDbContextCollection" value="contexts"/>
   </appSettings>
